--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
     <head>
         <title>Hello, World!</title>
-
+        <style>
+            body {
+                background-color: aqua;
+            }
+        </style>
     </head>
 
     <body>
