--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
             body {
                 background-color: aqua;
             }
+
+            h1 {
+                text-align: center;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
         </style>
     </head>
 
