--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
                 background-color: aqua;
             }
 
+            #header{
+                background-color: chocolate;
+                color: dodgerblue;
+            }
+
             h1 {
                 text-align: center;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,8 +20,10 @@
     </head>
 
     <body>
-
-        <h1>This is My Website</h1>
+        ,<div id="header">
+            <h1>This is My Website</h1>
+        </div>
+            
 
     </body>
 
