--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             #header{
                 background-color: chocolate;
                 color: dodgerblue;
+                width: 1000px;
+                
             }
 
             h1 {
