--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 background-color: chocolate;
                 color: dodgerblue;
                 width: 700px;
-
+                align-items: center;
             }
 
             h1 {
