--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
                 background-color: chocolate;
                 color: dodgerblue;
                 width: 700px;
-                align-items: center;
+                margin-right: auto;
+                margin-left: auto;
+                ;
             }
 
             h1 {
